# pac-man-project

./: .gitignore  CMakeLists.txt  README.md  吃豆人课设报告.docx
assets/maps/: map1.txt  map3.txt
docs/: UML类图.md  状态切换实现指南.md  系统结构图.html  系统结构图.md
src/: main.cpp
src/core/: Config.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  InputHandler.cpp  Types.h
src/entities/: Blinky.h  Clyde.h  Ghost.cpp  Ghost.h  Inky.h  Pacman.cpp  Pacman.h  Pinky.cpp  Pinky.h
src/items/: Dot.cpp  Dot.h  Fruit.cpp  Fruit.h  Item.h  PowerPellet.cpp  PowerPellet.h
src/managers/: ScoreManager.h  SoundManager.cpp  SoundManager.h
src/map/: MapManager.cpp  MapManager.h
src/states/: GameOverState.cpp  GameOverState.h  GameState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h
src/ui/: UIManager.cpp  UIManager.h
